Archive2/2f/1f103a50369ae6/output
main.cpp: In instantiation of ‘void f() [with int ...N = {2, 3, 4, 7, 7, 9}]’:
main.cpp:52:13:   required from ‘void invoke_f_with(list<N ...>) [with int ...N = {2, 3, 4, 7, 7, 9}]’
main.cpp:58:50:   required from ‘void g() [with int ...N = {4, 7, 2, 9, 3, 7}]’
main.cpp:63:20:   required from here
main.cpp:46:33: error: conversion from ‘int’ to non-scalar type ‘list<2, 3, 4, 7, 7, 9>’ requested
     list<N...> generate_error = 0;
                                 ^
